--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.4
+aiosignal==1.3.2
+altair==5.5.0
 annotated-types==0.7.0
+anyio==4.9.0
+async-timeout==4.0.3
+attrs==25.3.0
 blinker==1.9.0
 blis==1.3.0
+cachetools==5.5.2
 catalogue==2.0.10
 certifi==2025.4.26
 cffi==1.17.1
@@ -10,49 +18,102 @@ cloudpathlib==0.21.1
 confection==0.1.5
 cryptography==44.0.3
 cymem==2.0.11
+dataclasses-json==0.6.7
+distro==1.9.0
 en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl#sha256=293e9547a655b25499198ab15a525b05b9407a75f10255e405e8c3854329ab63
+exceptiongroup==1.3.0
 filelock==3.18.0
 Flask==3.1.1
+frozenlist==1.6.0
+gitdb==4.0.12
+GitPython==3.1.44
+greenlet==3.2.2
+groq==0.25.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+langchain==0.3.25
+langchain-community==0.3.24
+langchain-core==0.3.62
+langchain-groq==0.3.2
+langchain-text-splitters==0.3.8
 langcodes==3.5.0
+langsmith==0.3.43
 language_data==1.3.0
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+marshmallow==3.26.1
 mdurl==0.1.2
+multidict==6.4.4
 murmurhash==1.0.13
+mypy_extensions==1.1.0
+narwhals==1.41.0
 numpy==2.2.6
-packaging==25.0
+orjson==3.10.18
+packaging==24.2
+pandas==2.2.3
 phonenumbers==8.13.55
+pillow==11.2.1
 preshed==3.0.9
 presidio_analyzer==2.2.358
 presidio_anonymizer==2.2.358
+propcache==0.3.1
+protobuf==6.31.1
 pt_core_news_lg @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_lg-3.8.0/pt_core_news_lg-3.8.0-py3-none-any.whl#sha256=2561c9a72a938d37141e9694e1a36d25061a44ce7e4f3bad2d3fa3bb836191af
+pyarrow==20.0.0
 pycparser==2.22
 pydantic==2.11.5
+pydantic-settings==2.9.1
 pydantic_core==2.33.2
+pydeck==0.9.1
 Pygments==2.19.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
 PyYAML==6.0.2
+referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 requests-file==2.1.0
+requests-toolbelt==1.0.0
 rich==14.0.0
+rpds-py==0.25.1
 shellingham==1.5.4
+six==1.17.0
 smart-open==7.1.0
+smmap==5.0.2
+sniffio==1.3.1
 spacy==3.8.7
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
+SQLAlchemy==2.0.41
 srsly==2.5.1
+streamlit==1.45.1
+tenacity==9.1.2
 thinc==8.3.6
 tldextract==5.3.0
+toml==0.10.2
+tornado==6.5.1
 tqdm==4.67.1
 typer==0.15.4
+typing-inspect==0.9.0
 typing-inspection==0.4.1
 typing_extensions==4.13.2
+tzdata==2025.2
 urllib3==2.4.0
 wasabi==1.1.3
+watchdog==6.0.0
 weasel==0.4.1
 Werkzeug==3.1.3
 wrapt==1.17.2
+yarl==1.20.0
+zstandard==0.23.0
